--- a/HTML/splash.html
+++ b/HTML/splash.html
@@ -62,7 +62,7 @@
 
     
 
-      <div style="align-items:center; padding:50px;"><img src="https://github.com/quilt-lead/Website/raw/main/Images/Logo_AppleTouchIcon_Black_180x180.jpg"></div>
+      <div style="align-items:center; padding:50px;"><img src="C:\Users\Noah\Desktop\Website\Images\.svg\Logo - Invert.svg"></div>
       <div style="text-align:center; color:white; font-family: BebasKai;">DESIGN // ARCHITECTURE // EXPERIENCES</div>
       
         <div style="text-align:center; padding:50px;">
