--- a/HTML/splash.html
+++ b/HTML/splash.html
@@ -12,16 +12,14 @@
 
    
 <head>
-  
-<link rel="stylesheet" href="style.css">
-
-
+<link rel="stylesheet" href="https://github.com/quilt-lead/Website/blob/main/CSS/style.css">
+<link rel="icon" type="image/x-icon" href="https://github.com/quilt-lead/Website/blob/main/Images/Logo_Favicon_Black_32x32.jpg">
 </head>
 
 
 
 <body>
-  <div class="project-module module text project-module-text align- js-project-module e2e-site-project-module-text">
+  <div class="project-module module text project-module-text align- js-project-module e2e-site-project-module-text"
 
     
 
