custom splash stuff

--- a/HTML/splash.html
+++ b/HTML/splash.html
@@ -9,15 +9,20 @@
     />
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-    <background-image>    <section class="canvas">
-      <div id="sketch-holder"></div>
-      <script language="javascript" src="../HTML/js/p5.js"></script>
-      <script language="javascript" src="../HTML/js/sketch.js"></script>
-      <script src="sketch.js"></script>
-    </section></background-image>
+    <background-image style="min-height: 100%; min-width 100%;">
+      <section class="canvas">
+        <div id="sketch-holder"></div>
+        <script language="javascript" src="../HTML/js/p5.js"></script>
+        <script language="javascript" src="../HTML/js/sketch.js"></script>
+        <script language="javascript" src="../HTML/js/sketch2.js"></script>
+        <script src="../HTML/js/sketch.js"></script>
+        <script src="../HTML/js/sketch2.js"></script>
+      </section>
+
+      </background-image>
   </head>
 
-  <div class="container">
+  <div class="splash_contents">
     <div class="splash_header">NOAH ROSENBERG</div>
 
     <div class="main_image">
