--- a/HTML/home.html
+++ b/HTML/home.html
@@ -28,6 +28,7 @@
 
   <header class="site header">
     <nav>
+      <div class="navbar">
       <div class="topnav">
         <a class="nav" href="../HTML/home.html">HOME</a>
         <a class="nav" href="../HTML/portfolio.html">PORTFOLIO</a>
@@ -37,25 +38,22 @@
         <a class="nav" href="../HTML/contact.html">CONTACT</a>
         <a class="nav" href="../HTML/about.html">ABOUT</a>
       </div>
-    </nav>
-    <div
-    class="logo-wrap"
-    data-context="theme.logo.header"
-    data-hover-hint="logo"
-    data-hover-hint-placement="bottom-start"
-  >
-    <div class="header_logo">
-      <a href="../HTML/splash.html" class="image_link">
-        <img
-          src="../Images/.svg/Logo - Invert.svg"
-          alt="Noah Rosenberg"
-          style=
-          "height: 150px;"
-        />
-      </a>
-    </div>
-  </div>
-  </header>
 
- 
+      <div
+        class="headerlogo"
+        data-context="theme.logo.header"
+        data-hover-hint="logo"
+        data-hover-hint-placement="bottom-start"
+      >
+        <a href="../HTML/splash.html" class="image_link">
+          <img
+            class="headerlogo"
+            src="../Images/.svg/Logo - Invert.svg"
+            alt="Noah Rosenberg"
+          />
+        </a>
+      </div>
+    </div>
+    </nav>
+  </header>
 </html>
